Bug 39292 - ':optional' pseudo selector should not be applied to <keygen> and <progress>
Summary: ':optional' pseudo selector should not be applied to <keygen> and <progress>
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Forms (show other bugs)
Version: 528+ (Nightly build)
Hardware: All All
: P2 Normal
Assignee: Nobody
URL: http://www.whatwg.org/specs/web-apps/...
Keywords:
Depends on:
Blocks:
 
Reported: 2010-05-18 07:37 PDT by Kent Tamura
Modified: 2010-05-18 20:55 PDT (History)
3 users (show)

See Also:


Attachments
Proposed patch (5.73 KB, patch)
2010-05-18 07:44 PDT, Kent Tamura
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Kent Tamura 2010-05-18 07:37:36 PDT
':optional' pseudo selector should not be applied to <keygen> and <progress>
Comment 1 Kent Tamura 2010-05-18 07:44:01 PDT
Created attachment 56372 [details]
Proposed patch
Comment 2 Kent Tamura 2010-05-18 20:18:54 PDT
Landed as r59738
Comment 3 WebKit Review Bot 2010-05-18 20:40:14 PDT
http://trac.webkit.org/changeset/59738 might have broken Qt Linux Release
Comment 4 Kent Tamura 2010-05-18 20:55:52 PDT
(In reply to comment #3)
> http://trac.webkit.org/changeset/59738 might have broken Qt Linux Release

This looks Qt-only.  I filed https://bugs.webkit.org/show_bug.cgi?id=39341 .