':optional' pseudo selector should not be applied to <keygen> and <progress> https://bugs.webkit.org/show_bug.cgi?id=39292

Reviewed by Darin Adler.

WebCore:

Test: fast/css/pseudo-required-optional-unapplied.html

* html/HTMLKeygenElement.h:
(WebCore::HTMLKeygenElement::isOptionalFormControl):
  Add isOptionalFormControl() returning false.
  HTMLKeygenElement inherits HTMLSelectElement, which should return true
  for isOptionalFormControl(). However, <keygen> is not :optional
  according to the standard.
* html/HTMLProgressElement.h:
  Remove isOptionalFormControl().

LayoutTests:

Add a test for non-optional form elements.

* fast/css/pseudo-required-optional-unapplied-expected.txt: Added.
* fast/css/pseudo-required-optional-unapplied.html: Added.

Canonical link: https://commits.webkit.org/50856@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@59738 268f45cc-cd09-0410-ab3c-d52691b4dbfc