WebCore/html/HTMLProgressElement.h
@@ -42,7 +42,6 @@ private:
     HTMLProgressElement(const QualifiedName&, Document*, HTMLFormElement*);
 
     virtual bool recalcWillValidate() const { return false; }
-    virtual bool isOptionalFormControl() const { return true; }
 
     virtual const AtomicString& formControlType() const;
 
